ajustes nos status e correção de alguns bugs
